k8s.yaml
##__        __   _    ____  _ _                 ____ ____  _   _    ______  _____ _____ ____
##\ \      / /__| |__/ ___|(_) |_ ___     _    / ___/ ___|| | | |  / / ___||  ___|_   _|  _ \
## \ \ /\ / / _ \ '_ \___ \| | __/ _ \  _| |_  \___ \___ \| |_| | / /\___ \| |_    | | | |_) |
##  \ V  V /  __/ |_) |__) | | ||  __/ |_   _|  ___) |__) |  _  |/ /  ___) |  _|   | | |  __/
##   \_/\_/ \___|_.__/____/|_|\__\___|   |_|   |____/____/|_| |_/_/  |____/|_|     |_| |_|
##

## https://github.com/Tob1as/docker-php + https://hub.docker.com/r/tobi312/php
## https://github.com/linuxserver/docker-openssh-server + https://hub.docker.com/r/linuxserver/openssh-server

## https://kubernetes.io/docs/reference/kubectl/cheatsheet/
## kubectl apply -f k8s.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
      annotations: {}
    spec:
      #hostname: website
      containers:
        - name: website
          #image: tobi312/php:8.1-fpm-nginx-alpine
          image: tobi312/php:8.1-apache
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          - containerPort: 443
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "1Gi"
              cpu: "1.0"
          volumeMounts:
            - mountPath: /var/www/html
              name: website-data
            #- name: website-php-file-config
            #  mountPath: /usr/share/nginx/html/test.php
            #  subPath: test.php
        - name: openssh-server
          #image: ghcr.io/linuxserver/openssh-server:latest
          image: linuxserver/openssh-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2222
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.5"
          volumeMounts:
            - mountPath: /var/www/html
              name: website-data
            - mountPath: /config
              name: openssh-data
            #- name: openssh-file-config
            #  mountPath: /config/custom-cont-init.d/10-sshd_portforwarding.sh
            #  subPath: 10-sshd_portforwarding.sh
            - name: openssh-bashprofile-config
              mountPath: /config/.bash_profile
              subPath: .bash_profile
      restartPolicy: Always
      volumes:
        - name: website-data
          persistentVolumeClaim:
            claimName: website-data
        - name: openssh-data
          persistentVolumeClaim:
            claimName: openssh-data
        - name: website-php-file-config
          configMap:
            name: website-php-file-config
        - name: openssh-file-config
          configMap:
            name: openssh-file-config
        - name: openssh-bashprofile-config
          configMap:
            name: openssh-bashprofile-config

---

apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
  labels:
    app: website
spec:
  type: ClusterIP      # default
  ports:
    - name: website
      protocol: TCP
      port: 80
      targetPort: 80
    #- name: website-ssl
    #  protocol: TCP
    #  port: 443
    #  targetPort: 443
  selector:
    app: website

---

apiVersion: v1
kind: Service
metadata:
  name: openssh-server
  namespace: default
  labels:
    app: openssh
spec:
  type: NodePort      # for external access
  ports:
    - name: openssh-server
      protocol: TCP
      port: 2222
      targetPort: 2222
      #nodePort: 2222  # use this, when not random
  selector:
    app: website

---

## CertManager for Ingress (if use this then comment out "Secret for Ingress"):
## https://cert-manager.io/docs/ (https://github.com/jetstack/cert-manager)
## Installation needed: kubectl apply --validate=false -f https://github.com/jetstack/cert-manager/releases/download/v1.3.1/cert-manager.yaml

#apiVersion: cert-manager.io/v1
##kind: ClusterIssuer
#kind: Issuer
#metadata:
#  name: certmanager-ingress-nginx
#  namespace: default
#spec:
#  acme:
#    email: email@example.com
#    server: https://acme-v02.api.letsencrypt.org/directory
#    privateKeySecretRef:
#      name: ingress-tls-secret
#    solvers:
#    - http01:
#        ingress:
#          class: nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-website
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # CertManager:
    #cert-manager.io/cluster-issuer: certmanager-ingress-nginx
    #cert-manager.io/acme-challenge-type: http01
    ## oAuth2: https://kubernetes.github.io/ingress-nginx/examples/auth/oauth-external-auth/
    #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  tls:
  - hosts:
    - example.com
    secretName: ingress-tls-secret
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
